{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 11,
  "lineage": "0f9b821d-f248-4af9-65d3-03ec55b509de",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "new",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0cbdded3f024132e0",
            "id": "rtb-0cbdded3f024132e0",
            "owner_id": "845480486600",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-terraform"
            },
            "vpc_id": "vpc-08fe4702ae60417e0"
          },
          "dependencies": [
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-079f53e0977351635",
            "owner_id": "845480486600",
            "tags": {
              "Name": "igw-terraform"
            },
            "vpc_id": "vpc-08fe4702ae60417e0"
          },
          "dependencies": [
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01594cb8080bfed9e",
            "owner_id": "845480486600",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079f53e0977351635",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-terraform"
            },
            "vpc_id": "vpc-08fe4702ae60417e0"
          },
          "dependencies": [
            "aws_internet_gateway.new",
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0492475c17bda1ec0",
            "route_table_id": "rtb-01594cb8080bfed9e",
            "subnet_id": "subnet-0cc47a3b6de8989a9"
          },
          "dependencies": [
            "aws_internet_gateway.new",
            "aws_route_table.new",
            "aws_subnet.new",
            "aws_vpc.new"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a370d54fd10b5861",
            "route_table_id": "rtb-01594cb8080bfed9e",
            "subnet_id": "subnet-0fea832e6a2ebd52b"
          },
          "dependencies": [
            "aws_internet_gateway.new",
            "aws_route_table.new",
            "aws_subnet.new",
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "new",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845480486600:security-group/sg-0b2de1e1e0d7641e6",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2de1e1e0d7641e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform",
            "name_prefix": null,
            "owner_id": "845480486600",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08fe4702ae60417e0"
          },
          "dependencies": [
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "new",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845480486600:subnet/subnet-0cc47a3b6de8989a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.1.0/24",
            "id": "subnet-0cc47a3b6de8989a9",
            "map_public_ip_on_launch": true,
            "owner_id": "845480486600",
            "tags": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-08fe4702ae60417e0"
          },
          "dependencies": [
            "aws_vpc.new"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845480486600:subnet/subnet-0fea832e6a2ebd52b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.123.2.0/24",
            "id": "subnet-0fea832e6a2ebd52b",
            "map_public_ip_on_launch": true,
            "owner_id": "845480486600",
            "tags": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-08fe4702ae60417e0"
          },
          "dependencies": [
            "aws_vpc.new"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:845480486600:vpc/vpc-08fe4702ae60417e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0f4887751c9136079",
            "default_route_table_id": "rtb-0cbdded3f024132e0",
            "default_security_group_id": "sg-0dfce546b42ca35d7",
            "dhcp_options_id": "dopt-00a49c8fa32cbeb2a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08fe4702ae60417e0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbdded3f024132e0",
            "owner_id": "845480486600",
            "tags": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}